Added JSBasics and plotting block assignments

--- a/CSS/plottingblocks/plottingblocks.html
+++ b/CSS/plottingblocks/plottingblocks.html
@@ -2,23 +2,18 @@
 <html lang="en">
    <head>
       <title>Position Practice</title>
-      <link rel="stylesheet" type="text/css" href="/CSS/plottingblocks/plottingblocks.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
-      <div id="wrapper">
-        <div class="header">
-          <div id="header"></div>
-        </div>
-        <div class="body">
-          <div id="navigation">
-          </div>
-          <div id="main_content">
+       <div id="wrapper">
+         <div id="header"></div>
+         <div id="navigation"></div>
+         <div id="main_content">
             <div class="subcontents"></div>
             <div class="subcontents"></div>
             <div class="subcontents"></div>
             <div id="advertisement"></div>
-          </div>
-        </div>         
+         </div>
       </div><!-- end of wrapper -->
    </body>
 </html>
