About Python Page complete

--- a/CSS/AboutPython/index.html
+++ b/CSS/AboutPython/index.html
@@ -24,6 +24,68 @@
                 <button class="go">GO</button>
             </div>
         </div>
+
+        <div class="navigation-top">
+            <a href="#">About</a>
+            <a href="#">Downloads</a>
+            <a href="#">Documentation</a>
+            <a href="#">Community</a>
+            <a href="#">News</a>
+            <a href="#">Events</a>
+        </div>
+
+        <div class="nav-side">
+            <ul>
+                <li><a href="#">Docs</a></li>
+                <li><a href="#">Audio/Visual Talks</a></li>
+                <li><a href="#">Beginner's Guide</a></li>
+                <li><a href="#">Developer's Guide</a></li>
+                <li><a href="#">PEP Index</a></li>
+                <li><a href="#">Pyton Books</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+
+        <div class="about">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In eius optio dolorem et. Pariatur, reprehenderit voluptate eos animi, suscipit voluptatem debitis eum minus explicabo et qui possimus sunt maxime amet aperiam, commodi nostrum! Maiores, expedita. Totam at, laboriosam repellendus dignissimos provident dicta architecto numquam voluptas, sit ratione alias, similique quidem?</p>
+            <p class="poem">Lorem ipsum dolor sit amet.</p>
+            <p class="poem">Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="poem">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p class="poem">Lorem ipsum dolor sit amet.</p>
+            <p class="poem">Lorem ipsum dolor sit.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div> <!-- End of Main -->
+
+    <div class="features">
+        <div class="get-started">
+            <h3>Getting Started</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor molestiae culpa perferendis, accusamus architecto iure adipisci sint blanditiis, aliquid natus totam ipsa eius? Voluptate, iure?</p>
+            <ul>
+                <li>Lorem, ipsum dolor</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit</li>
+            </ul>
+        </div>
+
+        <div class="applications">
+            <h3>Applications</h3>
+            <p>Lorem ipsum <span class="custom">dolor sit amet</span> consectetur adipisicing elit. Ad vitae, voluptates iure, omnis rerum exercitationem magnam veniam eum numquam eos veritatis ex, soluta quo. Quia voluptates vero rem nobis quae et sunt velit accusamus atque tempora, veniam illum minus ut.</p>
+            <ul>
+                <li>Lorem ipsum dolor sit</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem, ipsum dolor</li>
+                <li>Lorem, ipsum</li>
+                <li>Lorem ipsum dolor sit</li>
+            </ul>
+        </div>
+    </div> <!-- End of Features -->
+
+    <div class="footer">
+        <a href="#">Help and General Contact</a>
+        <a href="#">Diversity Initiatives</a>
+        <a href="#">Submit Website Blogs</a>
+        <p>Copyright &copy;2001-2016. </p>
     </div>
 </body>
 </html>
