Responsive Profile: title and main image and about responsive

--- a/CSS/Portfolio/index.html
+++ b/CSS/Portfolio/index.html
@@ -11,25 +11,27 @@
 </head>
 <body>
   <div class="title">
-    <div class="name">
+    <div class="name lg-3">
       <h1>Jayne Doe</h1> 
     </div>
-    <div class="slogan">
+    <div class="slogan lg-3">
       <span>Master of shadows and the Internet!</span>
     </div>
   </div>
   <div class="container">
-    <div class="main-image"></div>
-    <div class="about">
+    <div class="main-image lg-3">
+      <img src="photo_of_me.jpg" alt="">
+    </div>
+    <div class="about lg-3">
       <div class="head">
         <h2>About...</h2>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores impedit est minima ad asperiores iusto illum recusandae pariatur id, nobis debitis laboriosam quae nisi?</p>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio molestias, nesciunt neque nihil qui dolores dolorem architecto sapiente officia? Quaerat, laudantium tempora. Illum tenetur magni corporis excepturi est, delectus repellendus eius. Consequatur ipsum culpa praesentium asperiores repudiandae aliquid. Inventore, amet!</p>
       <a href="#">Lorem, ipsum...</a>
-    </div>
+    </div> 
 
-    <div class="project">
+    <!-- <div class="project">
       <div class="head tech">
         <h2>Technologies:</h2>
       </div>
@@ -94,7 +96,7 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa quidem accusantium illo ipsam, doloribus soluta eveniet, cum excepturi molestiae possimus fuga voluptates laudantium magni cumque tempore maxime ea facilis mollitia assumenda nam quasi culpa! Perspiciatis dolores ex cum fugiat voluptas voluptatibus quaerat fugit, totam ad error, blanditiis aliquam hic rerum eaque officia minus ea, tenetur odit est. At, recusandae.</p>
     </div>
   </div> <!-- End of Continaer -->
-  <div class="title foot">
+  <!-- <div class="title foot">
     <span>Lorem@ipsum.com | 555-555-5555</span>
     <sapn class="social">
       <img src="github.png" alt="github"> Lorem 
@@ -102,6 +104,6 @@
       <img src="twitter.png" alt="twitter"> sit 
       <img src="codepen.png" alt="codepen"> amet
     </sapn>
-  </div>
+  </div> -->
 </body>
 </html>
