--- a/CSS/Portfolio/index.html
+++ b/CSS/Portfolio/index.html
@@ -19,82 +19,87 @@
     </div>
   </div>
   <div class="container">
-    <div class="main-image lg-3">
-      <img src="photo_of_me.jpg" alt="">
+    <div class="row">
+      <div class="main-image lg-3">
+          <img src="photo_of_me.jpg" alt="">
+        </div>
+        <div class="about lg-3">
+          <div class="head">
+            <h2>About...</h2>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores impedit est minima ad asperiores iusto illum recusandae pariatur id, nobis debitis laboriosam quae nisi?</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio molestias, nesciunt neque nihil qui dolores dolorem architecto sapiente officia? Quaerat, laudantium tempora. Illum tenetur magni corporis excepturi est, delectus repellendus eius. Consequatur ipsum culpa praesentium asperiores repudiandae aliquid. Inventore, amet!</p>
+          <a href="#">Lorem, ipsum...</a>
+        </div>
     </div>
-    <div class="about lg-3">
-      <div class="head">
-        <h2>About...</h2>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores impedit est minima ad asperiores iusto illum recusandae pariatur id, nobis debitis laboriosam quae nisi?</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio molestias, nesciunt neque nihil qui dolores dolorem architecto sapiente officia? Quaerat, laudantium tempora. Illum tenetur magni corporis excepturi est, delectus repellendus eius. Consequatur ipsum culpa praesentium asperiores repudiandae aliquid. Inventore, amet!</p>
-      <a href="#">Lorem, ipsum...</a>
-    </div> 
-
-    <!-- <div class="project">
-      <div class="head tech">
-        <h2>Technologies:</h2>
-      </div>
-      <div class="head">
-        <h2>Lorem</h2>
-      </div>
-      <div class="tech-icons">
-        <img src="php.png" alt="PHP">
-        <img src="codeigniter.png" alt="codeigniter">
-        <img src="jQuery.png" alt="jQuery">
-        <img src="ajax.png" alt="ajax">
-        <img src="mysql.png" alt="mysql">
-        <img src="HTML.png" alt="html">
-        <img src="CSS.png" alt="css">
-        <img src="bootstrap.png" alt="bootstrap">
-        <button>Lorem</button>
-      </div>
-      <img src="lamode.png" alt="Lamode Project">
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, perspiciatis dolorum! Mollitia perferendis voluptatibus quis praesentium adipisci. Rem alias dolores iste molestiae. Nulla reiciendis porro animi cupiditate quasi fuga, in dicta unde ipsum pariatur amet!</p>
+     
+    <div class="row">
+        <div class="project lg-2">
+            <div class="head tech">
+              <h2>Technologies:</h2>
+            </div>
+            <div class="head">
+              <h2>Lorem</h2>
+            </div>
+            <div class="tech-icons">
+              <img src="php.png" alt="PHP">
+              <img src="codeigniter.png" alt="codeigniter">
+              <img src="jQuery.png" alt="jQuery">
+              <img src="ajax.png" alt="ajax">
+              <img src="mysql.png" alt="mysql">
+              <img src="HTML.png" alt="html">
+              <img src="CSS.png" alt="css">
+              <img src="bootstrap.png" alt="bootstrap">
+              <button>Lorem</button>
+            </div>
+            <img src="lamode.png" alt="Lamode Project">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, perspiciatis dolorum! Mollitia perferendis voluptatibus quis praesentium adipisci. Rem alias dolores iste molestiae. Nulla reiciendis porro animi cupiditate quasi fuga, in dicta unde ipsum pariatur amet!</p>
+          </div>
+          <div class="project lg-2">
+            <div class="head tech">
+                <h2>Technologies:</h2>
+            </div>
+            <div class="head">
+              <h2>Lorem</h2>
+            </div>
+            <div class="tech-icons">
+              <img src="JavaScript.png" alt="JavaScript">
+              <img src="mongodb.png" alt="mongodb">
+              <img src="expressjs.png" alt="expressjs">
+              <img src="angular.png" alt="angular">
+              <img src="nodejs.png" alt="nodejs">
+              <img src="HTML.png" alt="html">
+              <img src="CSS.png" alt="css">
+              <img src="socket.png" alt="socket">
+              <button>Lorem</button>
+            </div>
+            <img src="fiveEleven.png" alt="Five Eleven Project">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ab unde numquam modi aliquid perferendis, ullam alias error, nihil, mollitia laudantium beatae. Rerum, quo, nisi odio id exercitationem iste quae quam architecto nihil voluptas natus aut ipsam nulla tempore sint velit dignissimos quasi odit. Saepe.</p>
+          </div>
+          <div class="project lg-2">
+            <div class="head tech">
+                <h2>Technologies:</h2>
+            </div>
+            <div class="head">
+              <h2>Lorem</h2>  
+            </div>
+            <div class="tech-icons">
+              <img src="python.png" alt="python">
+              <img src="django.png" alt="django">
+              <img src="d3.png" alt="d3">
+              <img src="angular.png" alt="angular">
+              <img src="sqlite.png" alt="sqlite">
+              <img src="HTML.png" alt="html">
+              <img src="CSS.png" alt="css">
+              <img src="JavaScript.png" alt="JavaScript">
+              <img src="materialize.png" alt="materialize">
+              <button>Lorem</button>
+            </div>
+            <img src="familycontacts.png" alt="Family Contacts Project">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa quidem accusantium illo ipsam, doloribus soluta eveniet, cum excepturi molestiae possimus fuga voluptates laudantium magni cumque tempore maxime ea facilis mollitia assumenda nam quasi culpa! Perspiciatis dolores ex cum fugiat voluptas voluptatibus quaerat fugit, totam ad error, blanditiis aliquam hic rerum eaque officia minus ea, tenetur odit est. At, recusandae.</p>
+          </div>
     </div>
-    <div class="project">
-      <div class="head tech">
-          <h2>Technologies:</h2>
-      </div>
-      <div class="head">
-        <h2>Lorem</h2>
-      </div>
-      <div class="tech-icons">
-          <img src="JavaScript.png" alt="JavaScript">
-          <img src="mongodb.png" alt="mongodb">
-          <img src="expressjs.png" alt="expressjs">
-          <img src="angular.png" alt="angular">
-          <img src="nodejs.png" alt="nodejs">
-          <img src="HTML.png" alt="html">
-          <img src="CSS.png" alt="css">
-          <img src="socket.png" alt="socket">
-          <button>Lorem</button>
-      </div>
-      <img src="fiveEleven.png" alt="Five Eleven Project">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto ab unde numquam modi aliquid perferendis, ullam alias error, nihil, mollitia laudantium beatae. Rerum, quo, nisi odio id exercitationem iste quae quam architecto nihil voluptas natus aut ipsam nulla tempore sint velit dignissimos quasi odit. Saepe.</p>
-    </div>
-    <div class="project">
-      <div class="head tech">
-          <h2>Technologies:</h2>
-      </div>
-      <div class="head">
-        <h2>Lorem</h2>  
-      </div>
-      <div class="tech-icons">
-        <img src="python.png" alt="python">
-        <img src="django.png" alt="django">
-        <img src="d3.png" alt="d3">
-        <img src="angular.png" alt="angular">
-        <img src="sqlite.png" alt="sqlite">
-        <img src="HTML.png" alt="html">
-        <img src="CSS.png" alt="css">
-        <img src="JavaScript.png" alt="JavaScript">
-        <img src="materialize.png" alt="materialize">
-        <button>Lorem</button>
-      </div>
-      <img src="familycontacts.png" alt="Family Contacts Project">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa quidem accusantium illo ipsam, doloribus soluta eveniet, cum excepturi molestiae possimus fuga voluptates laudantium magni cumque tempore maxime ea facilis mollitia assumenda nam quasi culpa! Perspiciatis dolores ex cum fugiat voluptas voluptatibus quaerat fugit, totam ad error, blanditiis aliquam hic rerum eaque officia minus ea, tenetur odit est. At, recusandae.</p>
-    </div>
+    
   </div> <!-- End of Continaer -->
   <!-- <div class="title foot">
     <span>Lorem@ipsum.com | 555-555-5555</span>
