responsive portfolio has all cards

--- a/CSS/Portfolio/index2.html
+++ b/CSS/Portfolio/index2.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Jayne Doe</h1>
-            <h2>Masters of Shadows and the Internet</h2>
+            <h1 class="block">Jayne Doe</h1>
+            <h2 class="block">Masters of Shadows and the Internet</h2>
         </div>
         <div class="main">
             <div class="container">
-                <div class="image">
+                <div class="image block">
                     <img src="photo_of_me.jpg" alt="photo_of_me">
                 </div>
-                <div class="about">
+                <div class="about white-pink block">
                     <div class="head">
                         <h2>About...</h2>
                     </div>
@@ -26,6 +26,85 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates perspiciatis soluta quam illo alias qui odit consectetur vero eum ut?</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam architecto placeat consequuntur molestiae neque accusamus cum, nisi eveniet, quisquam culpa, vel porro ex ipsa libero praesentium ratione quis! Debitis minus, dolorum commodi iste quaerat odit?</p>
                         <a href="#">Continue reading...</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="port-item lg-2 block">
+                    <div class="head">
+                        <h2>La Mode</h2>
+                    </div>
+                    <div class="port-card white-pink">
+                        <img src="lamode.png" alt="lamode">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, quasi ducimus? Ducimus, quia, nulla repellendus distinctio quas inventore, quo minus deleniti nihil earum labore aliquid!</p>
+                    </div>
+                    <div class="tech">
+                        <div class="head">
+                            <h3>Technologies:</h3>
+                        </div>
+                        <div class="tech-icons white-pink">
+                            <img src="php.png" alt="">
+                            <img src="codeigniter.png" alt="">
+                            <img src="jQuery.png" alt="">
+                            <img src="ajax.png" alt="">
+                            <img src="mysql.png" alt="">
+                            <img src="HTML.png" alt="">
+                            <img src="CSS.png" alt="">
+                            <img src="bootstrap.png" alt="">
+                            <a href="" class="btn">La Mode</a>
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="port-item lg-2 block">
+                    <div class="head">
+                        <h2>Family Contacts</h2>
+                    </div>  
+                    <div class="port-card white-pink">                        
+                        <img src="familycontacts.png" alt="familycontacts">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas placeat obcaecati ad delectus unde quae voluptatum expedita ullam veritatis porro deserunt, sunt assumenda quo inventore corporis vero. In aliquam unde accusantium, placeat maiores tenetur repellat?</p>
+                    </div>
+                    <div class="tech">
+                        <div class="head">
+                            <h3>Technologies:</h3>
+                        </div>
+                        <div class="tech-icons white-pink">
+                            <img src="JavaScript.png" alt="">
+                            <img src="mongodb.png" alt="">
+                            <img src="expressjs.png" alt="">
+                            <img src="angular.png" alt="">
+                            <img src="nodejs.png" alt="">
+                            <img src="HTML.png" alt="">
+                            <img src="CSS.png" alt="">
+                            <img src="socket.png" alt="">
+                            <a href="" class="btn">Family Contacts</a>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="port-item lg-2 block">
+                    <div class="head">
+                        <h2>fiveEleven</h2>
+                    </div>
+                    <div class="port-card white-pink">
+                        <img src="fiveEleven.png" alt="fiveEleven">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo architecto error aliquam quasi, facilis expedita perspiciatis a ducimus veritatis corrupti eligendi odit eius, accusantium distinctio qui atque corporis, doloribus ratione maiores! Ratione quisquam, aut sed eligendi quae est reprehenderit deserunt ducimus inventore autem illo officia eum, repudiandae harum fugit.!</p>
+                    </div>
+                    <div class="tech">
+                        <div class="head">
+                            <h3>Technologies:</h3>
+                        </div>
+                        <div class="tech-icons white-pink">
+                            <img src="python.png" alt="">
+                            <img src="django.png" alt="">
+                            <img src="d3.png" alt="">
+                            <img src="angular.png" alt="">
+                            <img src="sqlite.png" alt="">
+                            <img src="HTML.png" alt="">
+                            <img src="CSS.png" alt="">
+                            <img src="JavaScript.png" alt="">
+                            <img src="materialize.png" alt="">
+                            <a href="" class="btn">fiveEleven</a>
+                        </div>
                     </div>
                 </div>
             </div>
