responsive portfolio complete

--- a/CSS/Portfolio/index2.html
+++ b/CSS/Portfolio/index2.html
@@ -109,6 +109,26 @@
                 </div>
             </div>
         </div>
+        <div class="header footer">
+            <div class="physical">
+                <div class="e-mail block">
+                    <p>jdoe@gmails.com</p>
+                </div>
+                <div class="phone block">
+                    <p>206-555-1212</p>
+                </div>
+            </div>
+            <div class="social">
+                <img src="github.png" alt="">
+                <a href="#">jaynedev</a>
+                <img src="linkedin.png" alt="">
+                <a href="#">jayne-doe</a>
+                <img src="twitter.png" alt="">
+                <a href="#">jdtweets</a>
+                <img src="codepen.png" alt="">
+                <a href="#">jaynedev</a>
+            </div>
+        </div>
     </div><!-- End of container -->
     
 </body>
