minor tweak to pokemon

--- a/JQuery/WhatPokemon/index.html
+++ b/JQuery/WhatPokemon/index.html
@@ -43,7 +43,8 @@
             width: 95%;
         }
 
-        .name {
+        .name,
+        .info ul li {
             text-transform: capitalize;
         }
     </style>
