--- a/JQuery/WeatherApp/index.html
+++ b/JQuery/WeatherApp/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>What's the weather?</title>
   <script src="JQuery_3.3.1.js"></script>
+  <script src="scripts.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,13 +15,12 @@
   <div class="container">
     <div class="form-box">
       <h1>All I want is a little weather!</h1>
-      <form action="">
-        <input type="text" name="city-state" placeholder="City, ST">
-        <button class="search">Get the weather, bitch!</button>
+      <form id="location">
+        <input id="city" type="text" name="city" placeholder="City">
+        <input type="submit" value="Weather, please!">
       </form>
     </div>
     <div class="info-display">
-
     </div>
   </div>
 </body>
